src/test/ui/hrtb/hrtb-perfect-forwarding.stderr
error[E0308]: mismatched types
  --> $DIR/hrtb-perfect-forwarding.rs:46:5
   |
LL |     foo_hrtb_bar_not(&mut t);
   |     ^^^^^^^^^^^^^^^^ one type is more general than the other
   |
   = note: expected type `Bar<&'a isize>`
              found type `Bar<&'b isize>`

error[E0308]: mismatched types
  --> $DIR/hrtb-perfect-forwarding.rs:46:5
   |
LL |     foo_hrtb_bar_not(&mut t);
   |     ^^^^^^^^^^^^^^^^ one type is more general than the other
   |
   = note: expected type `Bar<&'a isize>`
              found type `Bar<&'b isize>`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
